examples/failing/f002-types-16bit.sq
{
    var x: u16;
    x = 65536;
}